--- a/src/pages/blocks.html
+++ b/src/pages/blocks.html
@@ -15,7 +15,7 @@ Author URL: http://w3layouts.com
  <!-- Bootstrap CSS -->
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
  <!-- Template CSS -->
- <link rel="stylesheet" href="assets/css/style.css">
+ <link rel="stylesheet" href="../assets/css/style.css">
 
 </head>
 
@@ -40,7 +40,7 @@ Author URL: http://w3layouts.com
       <!-- //image logo -->
 
       <div class="logo-icon text-center">
-        <a href="index.html" title="logo"><img src="assets/images/logo.png" alt="logo-icon"> </a>
+        <a href="index.html" title="logo"><img src="../assets/images/logo.png" alt="logo-icon"> </a>
       </div>
       <!-- //logo end -->
 
